# fmi-import-export-tutorial-2025

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
export/: CMakeLists.txt  model.fmu  modelDescription.xml
export/sources/: model.c
import/: CMakeLists.txt  main.c
